--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "author": "Matheus Campos",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -21,6 +21,7 @@
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.2",
