--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.2.34"
   },
@@ -24,7 +25,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql": "^2.15.18",
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
